sessions/TCS/CKA/yamls/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodehello
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ckatcs.lab
    http:
      paths:
      - backend:
          service:
            name: nodehello
            port:
              number: 80
        path: /hello
        pathType: Prefix
